--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
-<html>
-  <head></head>
+<html lang="en">
+  <head>
+    <meta charset="utf-8" />
+    <title>document</title>
+  </head>
   <body>
     <a href="https://www.example.com/">Link</a>
   </body>
